# sieve_exec_comparison

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  sieve.hpp  sieve_async_fun.cpp  sieve_cc_fun.cpp  sieve_direct_fun.cpp  sieve_fun.hpp  sieve_p2300_fun.cpp  sieve_tbb_fun.cpp  sieve_unifex_fun.cpp  timer.hpp
benchmarks/: sieve_benchmark.ipynb
sieve/: CMakeLists.txt  sieve.hpp  sieve_cc_fun.cpp  sieve_ccotter_fun.cpp  sieve_fun.hpp  sieve_p2300_fun.cpp  sieve_tbb_fun.cpp  sieve_unifex_fun.cpp  sieve_when_all_scope.cpp  timer.hpp
